--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 <head>
   <title>
-    ALL ABOUT PEY !
+    ALL ABOUT PEY!
   </title>
+  <h> All ABOUT PEY !</h>
 </head>
 <body> 
   <p> Hey Im Pey :hand:. I was legally born 'Irnise Di-Bree White' on Novemeber 6th, 1996 to My parents Sharon & Irwin White. but when im following the white rabbit like Neo in the movie 'The Matrix' i like to go by Pey. you as the reader/viewer shall feel free to call me either or... just as long as you call me lol</p>
