--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <title>
     ALL ABOUT PEY!
   </title>
-  <h> All ABOUT PEY !</h>
 </head>
 <body> 
+  <h1> All ABOUT PEY !</h1>
   <p> Hey Im Pey :hand:. I was legally born 'Irnise Di-Bree White' on Novemeber 6th, 1996 to My parents Sharon & Irwin White. but when im following the white rabbit like Neo in the movie 'The Matrix' i like to go by Pey. you as the reader/viewer shall feel free to call me either or... just as long as you call me lol</p>
   
   <p>I was born and raised in the bronx , though i did spend a year in jersey when i went away to jobcorp back in 2013, there i took up office administration and completed with microsoft certifications. jobcorp was the only other place i lived other then my apartment back in the bronx, so its always been my dream to travel the world, i started traveling last year in 2021 i went to places like Miami , PR , Houston and Atlanta. and this year for my birthday i finally made it to canada somewhere id had been trying to go since i was like 11 years old. i had an amazing time and dying to go back.</p>
