--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body> 
   <h1> All ABOUT PEY !</h1>
   <p> Hey Im Pey :hand:. I was legally born 'Irnise Di-Bree White' on Novemeber 6th, 1996 to My parents Sharon & Irwin White. but when im following the white rabbit like Neo in the movie 'The Matrix' i like to go by Pey. you as the reader/viewer shall feel free to call me either or... just as long as you call me lol</p>
-  <a href = #> https://images.app.goo.gl/bBzzLk2ZMhp5oZcYA </a>
+  <img src=”(https://images.app.goo.gl/bBzzLk2ZMhp5oZcYA)”>
   <p>I was born and raised in the bronx , though i did spend a year in jersey when i went away to jobcorp back in 2013, there i took up office administration and completed with microsoft certifications. jobcorp was the only other place i lived other then my apartment back in the bronx, so its always been my dream to travel the world, i started traveling last year in 2021 i went to places like Miami , PR , Houston and Atlanta. and this year for my birthday i finally made it to canada somewhere id had been trying to go since i was like 11 years old. i had an amazing time and dying to go back.</p>
   
   <p> i always been tech savvy and drawn to technology , but i always looked at it as a skill or hobby and not a career, with the covid 19 pandemic hitting the world by storm it made me realize that my whole life i had just been surviving and i decided that i wanted to start living. i knew i wasnt going to do that by settling what i could work with , i was goint to being to come for everything i deserved. i wanted more , i wanted to start a business and spend more time with my family and partner, i wanted to travel . and i kne i wasnt goin to do slaving away making someone else rich </p> </body>
