--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   </title>
 </head>
 <body> 
-  <h1> All ABOUT PEY !</h1>
-  <p> Hey Im Pey :brown hand:. I was legally born 'Irnise Di-Bree White' on Novemeber 6th, 1996 to My parents Sharon & Irwin White. but when im following the white rabbit like Neo in the movie 'The Matrix' i like to go by Pey. you as the reader/viewer shall feel free to call me either or... just as long as you call me lol</p>
+  <h2> All ABOUT PEY !</h2>
+  <h3> Hey Im Pey <p><span>&#128400;&#127996;</span></h3>
+  <p> I was legally born 'Irnise Di-Bree White' on Novemeber 6th, 1996 to My parents Sharon & Irwin White. but when im following the white rabbit like Neo in the movie 'The Matrix' i like to go by Pey. you as the reader/viewer shall feel free to call me either or... just as long as you call me lol</p>
  <img src="https://tinypic.host/images/2022/12/05/flat750x1000075f.u5.jpg" alt="flat750x1000075f.u5.jpg" border="0" />
   <p>I was born and raised in the bronx , though i did spend a year in edison, jersey when i went away to train at edison jobcorp academy back in 2013, there i took up office administration and completed with microsoft certifications. jobcorp was the only other place i lived other then my apartment back in the bronx, so i guess you can imagine it always being my dream to travel the world, i started traveling last year in 2021 i went to places like Miami , PR , Houston and Atlanta. and this year for my birthday i finally made it to canada! somewhere id had been trying to go since i was like 11 years old. I had an amazing time and Im dying to go back.</p>
   
