--- a/index.html
+++ b/index.html
@@ -27,6 +27,19 @@
   <li> "The Masque of the Red Death" a Short story by Edgar Allen Poe</li>
   
   
+  <table width="50%" border= solid> 
+    <tr>
+      <th>places i want to go</th>
+      <th>places ive been</th>
+      <th>places i want to live</th>
+    </tr>
+    <tr>
+      <td></td>
+      <td></td>
+      <td></td>
+    </tr>
+  </table>
+  
   </body>
  
   
