--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <h3> Hey Im Pey <p><span>&#128400;&#127996;</span></h3>
   
   <nav>
-    <a href=""> Peys fav things </a>
-    <a href=""> ????</a>
+    <a href=""> stories </a>
+    <a href=""> contact</a>
       
   <p> I was legally born 'Irnise Di-Bree White' on Novemeber 6th, 1996 to My parents Sharon & Irwin White. but when im following the white rabbit like Neo in the movie 'The Matrix' i like to go by Pey. you as the reader/viewer shall feel free to call me either or... just as long as you call me lol</p>
  <img src="https://tinypic.host/images/2022/12/05/flat750x1000075f.u5.jpg" alt="flat750x1000075f.u5.jpg" border="0" />
@@ -33,7 +33,6 @@
   <li> "The Masque of the Red Death" a Short story by Edgar Allen Poe</li>
   </nav
   
-  <nav
   <table width="50%" border= solid> 
     <tr>
       <th>places i want to go</th>
@@ -46,7 +45,7 @@
       <td></td>
     </tr>
   </table>
-  </nav>
+  
   
   
   </body>
