--- a/index.html
+++ b/index.html
@@ -15,9 +15,15 @@
       
   <p> I was legally born 'Irnise Di-Bree White' on Novemeber 6th, 1996 to My parents Sharon & Irwin White. but when im following the white rabbit like Neo in the movie 'The Matrix' i like to go by Pey. you as the reader/viewer shall feel free to call me either or... just as long as you call me lol</p>
  <img src="https://tinypic.host/images/2022/12/05/flat750x1000075f.u5.jpg" alt="flat750x1000075f.u5.jpg" border="0" />
-  <p>I was born and raised in the bronx , though i did spend a year in edison, jersey when i went away to train at edison jobcorp academy back in 2013, there i took up office administration and completed with microsoft certifications. jobcorp was the only other place i lived other then my apartment back in the bronx, so i guess you can imagine it always being my dream to travel the world, i started traveling last year in 2021 i went to places like Miami , PR , Houston and Atlanta. and this year for my birthday i finally made it to canada! somewhere id had been trying to go since i was like 11 years old. I had an amazing time and Im dying to go back.</p>
   
-  <p> i always been tech savvy and drawn to technology , but i always looked at it as a skill or hobby and not a career, with the covid 19 pandemic hitting the world by storm it made me realize that my whole life i had just been surviving and i decided that i wanted to start living. I wanted more , I started a business, I spent more time with my family and partner, Im traveling more . and now im taking the next step in to my tech career! </p> 
+    <div>
+    <p>I was born and raised in the bronx , though i did spend a year in edison, jersey when i went away to train at edison jobcorp academy back in 2013, there i took up office administration and completed with microsoft certifications. jobcorp was the only other place i lived other then my apartment back in the bronx, so i guess you can imagine it always being my dream to travel the world, i started traveling last year in 2021 i went to places like Miami , PR , Houston and Atlanta. and this year for my birthday i finally made it to canada! somewhere id had been trying to go since i was like 11 years old. I had an amazing time and Im dying to go back.</p>
+     </div>
+  
+    <div>
+  <p> i always been tech savvy and drawn to technology , but i always looked at it as a skill or hobby and not a career, with the covid 19 pandemic hitting the world by storm it made me realize that my whole life i had just been surviving and i decided that i wanted to start living. I wanted more , I started a business, I spent more time with my family and partner, Im traveling more . and now im taking the next step in to my tech career! 
+   <img src="https://tinypic.host/images/2022/12/05/0b1832f97dfd03c2fd861e09c0091f37.jpg" alt="0b1832f97dfd03c2fd861e09c0091f37.jpg" border="0" /> </p> 
+    </div>
   
     <nav>
   <p> heres a few of my favorite movies 
@@ -40,9 +46,13 @@
       <th>places i want to live</th>
     </tr>
     <tr>
-      <td></td>
-      <td></td>
-      <td></td>
+      <td><ul><li>Hawaii<li>
+        <li>London</li>
+        <li>Japan</li></td>
+      <td><ul><li>Canada</li>
+        <li>Miami</li>
+        <li>PR</li></td>
+      <td>canada</td>
     </tr>
   </table>
   
