--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
    <img src="https://tinypic.host/images/2022/12/05/0b1832f97dfd03c2fd861e09c0091f37.jpg" alt="0b1832f97dfd03c2fd861e09c0091f37.jpg" border="0" /> </p> 
     </div>
   
-    <nav>
   <p> heres a few of my favorite movies 
   <ul> <li> <a href = https://www.imdb.com/title/tt0430308/?ref_=ext_shr_lnk>"Get Rich or Die Tryin"</a></lil>
   <li> <a href = https://www.imdb.com/title/tt0343660/?ref_=ext_shr_lnk>"50 First Dates"</a></li>
@@ -37,8 +36,8 @@
 <Ol> <li> "Harry Potter Universe" Books (would have added that in movie list but much perfer to these books i  still <3 the movies though.) </li>
   <li> "The Prada Plan series by Ashley Anntoinette" </li>
   <li> "The Masque of the Red Death" a Short story by Edgar Allen Poe</li>
-  </nav
   
+  <div>
   <table width="50%" border= solid> 
     <tr>
       <th>places i want to go</th>
@@ -55,6 +54,7 @@
       <td>canada</td>
     </tr>
   </table>
+  </div>
   
   
   
