--- a/index.html
+++ b/index.html
@@ -26,16 +26,22 @@
     </div>
   
   <p> heres a few of my favorite movies 
-  <ul> <li> <a href = https://www.imdb.com/title/tt0430308/?ref_=ext_shr_lnk>"Get Rich or Die Tryin"</a></lil>
+  <ul> 
+    <li> <a href = https://www.imdb.com/title/tt0430308/?ref_=ext_shr_lnk>"Get Rich or Die Tryin"</a></lil>
   <li> <a href = https://www.imdb.com/title/tt0343660/?ref_=ext_shr_lnk>"50 First Dates"</a></li>
   <li> <a href = https://collider.com/the-matrix-movies-in-order-how-to-watch/>"The Matrix Triology"</a></li>
   <li> <a href = https://www.imdb.com/title/tt0441796/?ref_=ext_shr_lnk>"Stay Alive" </a></li>
   <li> <a href = https://www.denofgeek.com/movies/james-wan-horror-movies-ranked/>"Anything James Wan"</a></li>
 </ul>
+
+<div>
 <p> and here ive listed some of my favorite Books ! </p>
-<Ol> <li> "Harry Potter Universe" Books (would have added that in movie list but much perfer to these books i  still <3 the movies though.) </li>
+<Ol> 
+  <li> "Harry Potter Universe" Books (would have added that in movie list but much perfer to these books i  still <3 the movies though.) </li>
   <li> "The Prada Plan series by Ashley Anntoinette" </li>
   <li> "The Masque of the Red Death" a Short story by Edgar Allen Poe</li>
+ </ol>
+</div>
   
   <div>
   <table width="50%" border= solid> 
