--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
     <div>
   <p> 
     i always been tech savvy and drawn to technology , but i always looked at it as a skill or hobby and not a career, with the covid 19 pandemic hitting the world by storm it made me realize that my whole life i had just been surviving and i decided that i wanted to start living. I wanted more , I started a business, I spent more time with my family and partner, Im traveling more . and now im taking the next step in to my tech career! 
-   <img src="https://tinypic.host/images/2022/12/05/0b1832f97dfd03c2fd861e09c0091f37.jpg" alt="0b1832f97dfd03c2fd861e09c0091f37.jpg" border="0" /> </p> 
+    </p> 
     </div>
+  <img src="https://tinypic.host/images/2022/12/05/0b1832f97dfd03c2fd861e09c0091f37.jpg" alt="0b1832f97dfd03c2fd861e09c0091f37.jpg" border="0"
   
+       <div>
   <p> 
     heres a few of my favorite movies 
   <ul> 
@@ -44,6 +46,7 @@
   <li> <a href = https://www.denofgeek.com/movies/james-wan-horror-movies-ranked/>"Anything James Wan"</a></li>
 </ul>
 </p>
+    </div>
 
 <div>
 <p> 
